# simple-pycutter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  cookiecutter.json  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repository_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  pyproject.toml  run_tests.sh
{{cookiecutter.repository_name}}/.github/: code_of_conduct.md  contributing.md  contributor_license_agreement.md
{{cookiecutter.repository_name}}/.github/templates/: bug-report.md  feature-request.md  pull-request.md  question.md
{{cookiecutter.repository_name}}/.github/workflows/: tests.yml
{{cookiecutter.repository_name}}/docs/: README-DEV.md
{{cookiecutter.repository_name}}/testing_framework/: .coveragerc  Dockerfile  conftest.py  mypy.ini  pytest.ini
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/: __init__.py
